fixed the page with on mobile

--- a/css/main.scss
+++ b/css/main.scss
@@ -1784,6 +1784,18 @@ footer p, footer a {
   }
 }
 
+@media handheld, only screen and (max-width: 600px) {
+  .logo {
+    display: block;
+    float: left;
+    width: 300px;
+    height: 71px;
+    text-indent: -9999px;
+    background: url(/images/logo-qwan-only.png) no-repeat;
+    background-size: 300px 71px;
+  }  
+}
+
 @media handheld, only screen and (max-width: 480px) {
   
   .header-carousel {
